--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
   margin-right: 3rem;
 }
 .rfsh {
-  margin-left: 65%;
+  margin-left: 42rem;
 }
 @media screen and (max-width: 650px){
   .rfsh {
